fixed spacing css classes

--- a/didi.css
+++ b/didi.css
@@ -376,7 +376,7 @@
 .vspace-tiny+.vspace-tiny,.vspace-2+.vspace-2{margin-top:2px}
 .hspace-small+.hspace-small,.hspace-4+.hspace-4{margin-left:4px}
 .vspace-small+.vspace-small,.vspace-4+.vspace-4{margin-top:4px}
-.hspace-medium+.vspace-medium,.hspace+.hspace,.hspace-8+.hspace-8{margin-left:8px}
+.hspace-medium+.hspace-medium,.hspace+.hspace,.hspace-8+.hspace-8{margin-left:8px}
 .vspace,.vspace-medium+.vspace-medium,.vspace+.vspace,.vspace-8+.vspace-8{margin-top:8px}
 .hspace-large+.hspace-large,.hspace-12+.hspace-12{margin-left:12px}
 .vspace-large+.vspace-large,.vspace-12+.vspace-12{margin-top:12px}
@@ -385,9 +385,9 @@
 .hspace-xxlarge+.hspace-xxlarge,.hspace-24+.hspace-24{margin-left:24px}
 .vspace-xxlarge+.vspace-xxlarge,.vspace-24+.vspace-24{margin-top:24px}
 .hspace-xxxlarge+.hspace-xxxlarge,.hspace-32+.hspace-32{margin-left:32px}
-.hspace-xxxlarge+.hspace-xxxlarge,.vspace-32+.vspace-32{margin-top:32px}
-.hspace-jumbo+.hspace-jumbo,.hspace-64+.hspace-64{margin-left:32px}
-.hspace-jumbo+.hspace-jumbo,.vspace-64+.vspace-64{margin-top:32px}
+.hspace-xxxlarge+.vspace-xxxlarge,.vspace-32+.vspace-32{margin-top:32px}
+.hspace-jumbo+.hspace-jumbo,.hspace-64+.hspace-64{margin-left:64px}
+.vspace-jumbo+.vspace-jumbo,.vspace-64+.vspace-64{margin-top:64px}
 
 
 /* text alignment */
